# acclapack-tests

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  acclapack-automplete.org  common.hpp
common/: common.hpp
cusolver/: util.hpp  zheev.cpp
rocsolver/: heev.cpp  zheev.cpp
spack-envs/cuda/: spack.yaml
spack-envs/rocm/: spack.yaml
src/: cuda_zheev.cpp  generate_sym_matrix.cu  generate_sym_matrix.cu.hip  generate_sym_matrix.hpp  generate_sym_matrix_cuda.cu  generate_sym_matrix_hip.cu  rocm_zheev.cpp
